openshift-authentication/deployments.apps.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "11"
      operator.openshift.io/rvs-hash: cIlYM-jqmGQ3FN0sH_2y3pRM33Ix5qx0FTMwVuHx4omYD5BwRDryKvUPeKeDj4QUb0OpslS2PnN3MFSJoWIOLA
      operator.openshift.io/spec-hash: 9bab455ecd38ebafc3c14cdb11d575992f319462b875f115bc7bdb24ea66dce1
    creationTimestamp: "2023-05-04T21:49:28Z"
    generation: 11
    labels:
      app: oauth-openshift
    name: oauth-openshift
    namespace: openshift-authentication
    resourceVersion: "488844066"
    uid: fd1af6c7-c874-4659-a4ce-f2fb2b3af8ae
  spec:
    progressDeadlineSeconds: 600
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: oauth-openshift
    strategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        annotations:
          operator.openshift.io/bootstrap-user-exists: "true"
          operator.openshift.io/rvs-hash: cIlYM-jqmGQ3FN0sH_2y3pRM33Ix5qx0FTMwVuHx4omYD5BwRDryKvUPeKeDj4QUb0OpslS2PnN3MFSJoWIOLA
          target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        creationTimestamp: null
        labels:
          app: oauth-openshift
          oauth-openshift-anti-affinity: "true"
        name: oauth-openshift
        namespace: openshift-authentication
      spec:
        affinity:
          podAntiAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: oauth-openshift
                  oauth-openshift-anti-affinity: "true"
              topologyKey: kubernetes.io/hostname
        containers:
        - args:
          - |
            if [ -s /var/config/system/configmaps/v4-0-config-system-trusted-ca-bundle/ca-bundle.crt ]; then
                echo "Copying system trust bundle"
                cp -f /var/config/system/configmaps/v4-0-config-system-trusted-ca-bundle/ca-bundle.crt /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
            fi
            exec oauth-server osinserver \
            --config=/var/config/system/configmaps/v4-0-config-system-cliconfig/v4-0-config-system-cliconfig \
            --v=2
          command:
          - /bin/bash
          - -ec
          image: quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:73db334e251ce085c1bdac76a793cf244d340ef6ba7058f7ca5ba77566c058df
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                - sleep
                - "25"
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: oauth-openshift
          ports:
          - containerPort: 6443
            name: https
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 6443
              scheme: HTTPS
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          securityContext:
            readOnlyRootFilesystem: false
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
          - mountPath: /var/config/system/secrets/v4-0-config-system-session
            name: v4-0-config-system-session
            readOnly: true
          - mountPath: /var/config/system/configmaps/v4-0-config-system-cliconfig
            name: v4-0-config-system-cliconfig
            readOnly: true
          - mountPath: /var/config/system/secrets/v4-0-config-system-serving-cert
            name: v4-0-config-system-serving-cert
            readOnly: true
          - mountPath: /var/config/system/configmaps/v4-0-config-system-service-ca
            name: v4-0-config-system-service-ca
            readOnly: true
          - mountPath: /var/config/system/secrets/v4-0-config-system-router-certs
            name: v4-0-config-system-router-certs
            readOnly: true
          - mountPath: /var/config/system/secrets/v4-0-config-system-ocp-branding-template
            name: v4-0-config-system-ocp-branding-template
            readOnly: true
          - mountPath: /var/config/user/template/secret/v4-0-config-user-template-login
            name: v4-0-config-user-template-login
            readOnly: true
          - mountPath: /var/config/user/template/secret/v4-0-config-user-template-provider-selection
            name: v4-0-config-user-template-provider-selection
            readOnly: true
          - mountPath: /var/config/user/template/secret/v4-0-config-user-template-error
            name: v4-0-config-user-template-error
            readOnly: true
          - mountPath: /var/config/system/configmaps/v4-0-config-system-trusted-ca-bundle
            name: v4-0-config-system-trusted-ca-bundle
            readOnly: true
          - mountPath: /var/config/user/idp/0/secret/v4-0-config-user-idp-0-file-data
            name: v4-0-config-user-idp-0-file-data
            readOnly: true
          - mountPath: /var/config/user/idp/1/secret/v4-0-config-user-idp-1-bind-password
            name: v4-0-config-user-idp-1-bind-password
            readOnly: true
        dnsPolicy: ClusterFirst
        nodeSelector:
          node-role.kubernetes.io/master: ""
        priorityClassName: system-cluster-critical
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: oauth-openshift
        serviceAccountName: oauth-openshift
        terminationGracePeriodSeconds: 40
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoExecute
          key: node.kubernetes.io/unreachable
          operator: Exists
          tolerationSeconds: 120
        - effect: NoExecute
          key: node.kubernetes.io/not-ready
          operator: Exists
          tolerationSeconds: 120
        volumes:
        - name: v4-0-config-system-session
          secret:
            defaultMode: 420
            secretName: v4-0-config-system-session
        - configMap:
            defaultMode: 420
            name: v4-0-config-system-cliconfig
          name: v4-0-config-system-cliconfig
        - name: v4-0-config-system-serving-cert
          secret:
            defaultMode: 420
            secretName: v4-0-config-system-serving-cert
        - configMap:
            defaultMode: 420
            name: v4-0-config-system-service-ca
          name: v4-0-config-system-service-ca
        - name: v4-0-config-system-router-certs
          secret:
            defaultMode: 420
            secretName: v4-0-config-system-router-certs
        - name: v4-0-config-system-ocp-branding-template
          secret:
            defaultMode: 420
            secretName: v4-0-config-system-ocp-branding-template
        - name: v4-0-config-user-template-login
          secret:
            defaultMode: 420
            optional: true
            secretName: v4-0-config-user-template-login
        - name: v4-0-config-user-template-provider-selection
          secret:
            defaultMode: 420
            optional: true
            secretName: v4-0-config-user-template-provider-selection
        - name: v4-0-config-user-template-error
          secret:
            defaultMode: 420
            optional: true
            secretName: v4-0-config-user-template-error
        - configMap:
            defaultMode: 420
            name: v4-0-config-system-trusted-ca-bundle
            optional: true
          name: v4-0-config-system-trusted-ca-bundle
        - name: v4-0-config-user-idp-0-file-data
          secret:
            defaultMode: 420
            items:
            - key: htpasswd
              path: htpasswd
            secretName: v4-0-config-user-idp-0-file-data
        - name: v4-0-config-user-idp-1-bind-password
          secret:
            defaultMode: 420
            items:
            - key: bindPassword
              path: bindPassword
            secretName: v4-0-config-user-idp-1-bind-password
  status:
    availableReplicas: 3
    conditions:
    - lastTransitionTime: "2023-09-22T11:12:27Z"
      lastUpdateTime: "2023-09-22T11:12:27Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-05-04T21:49:28Z"
      lastUpdateTime: "2024-07-30T16:25:02Z"
      message: ReplicaSet "oauth-openshift-7b89d7f967" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 11
    readyReplicas: 3
    replicas: 3
    updatedReplicas: 3
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
