openshift-authentication/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-30T16:25:02Z"
    creationTimestamp: "2023-05-04T21:40:36Z"
    labels:
      app: oauth-openshift
    name: oauth-openshift
    namespace: openshift-authentication
    resourceVersion: "488844059"
    uid: 64e8e664-a234-4c8c-909e-806d10015ab8
  subsets:
  - addresses:
    - ip: 10.128.0.123
      nodeName: ocp4azu-sj2sl-master-2
      targetRef:
        kind: Pod
        name: oauth-openshift-7b89d7f967-ld9bb
        namespace: openshift-authentication
        resourceVersion: "488843265"
        uid: 3746b5b3-ed4d-4acc-b263-bbad7b3de386
    - ip: 10.129.0.65
      nodeName: ocp4azu-sj2sl-master-0
      targetRef:
        kind: Pod
        name: oauth-openshift-7b89d7f967-jppvm
        namespace: openshift-authentication
        resourceVersion: "488844055"
        uid: 81bdb1a1-f8ad-4791-a311-b65f72c76af0
    - ip: 10.130.1.105
      nodeName: ocp4azu-sj2sl-master-1
      targetRef:
        kind: Pod
        name: oauth-openshift-7b89d7f967-f97qm
        namespace: openshift-authentication
        resourceVersion: "488842492"
        uid: 62a78050-f74a-4888-b807-79603b48acdf
    ports:
    - name: https
      port: 6443
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
