openshift-authentication/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.1.105
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-1
    targetRef:
      kind: Pod
      name: oauth-openshift-7b89d7f967-f97qm
      namespace: openshift-authentication
      resourceVersion: "488842492"
      uid: 62a78050-f74a-4888-b807-79603b48acdf
    zone: brazilsouth-2
  - addresses:
    - 10.128.0.123
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-2
    targetRef:
      kind: Pod
      name: oauth-openshift-7b89d7f967-ld9bb
      namespace: openshift-authentication
      resourceVersion: "488843265"
      uid: 3746b5b3-ed4d-4acc-b263-bbad7b3de386
    zone: brazilsouth-3
  - addresses:
    - 10.129.0.65
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-0
    targetRef:
      kind: Pod
      name: oauth-openshift-7b89d7f967-jppvm
      namespace: openshift-authentication
      resourceVersion: "488844055"
      uid: 81bdb1a1-f8ad-4791-a311-b65f72c76af0
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-07-30T16:25:02Z"
    creationTimestamp: "2023-05-04T21:40:36Z"
    generateName: oauth-openshift-
    generation: 175
    labels:
      app: oauth-openshift
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: oauth-openshift
    name: oauth-openshift-mbtxh
    namespace: openshift-authentication
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: oauth-openshift
      uid: 369fb94f-c4b1-4317-9841-0db8e9f3cd9a
    resourceVersion: "488844058"
    uid: 3e146fb3-6833-47e6-b6e1-296b334f2977
  ports:
  - name: https
    port: 6443
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
