openshift-authentication/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.alpha.openshift.io/serving-cert-secret-name: v4-0-config-system-serving-cert
      service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
      service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
    creationTimestamp: "2023-05-04T21:40:36Z"
    labels:
      app: oauth-openshift
    name: oauth-openshift
    namespace: openshift-authentication
    resourceVersion: "6520"
    uid: 369fb94f-c4b1-4317-9841-0db8e9f3cd9a
  spec:
    clusterIP: 172.30.109.66
    clusterIPs:
    - 172.30.109.66
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 6443
    selector:
      app: oauth-openshift
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
